--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ div.container{
  top: 300px;
   left: 120px;
   z-index: 1;
-  background-image: url(./trash.jpeg);
+  background-image: url(./trash.png);
   background-position: center;
   background-size: 40px;
   cursor: pointer;
